--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   firebase_auth: ^5.2.1
   cloud_firestore: ^5.4.1
   flutter_bloc: ^8.1.6
+  sqflite: ^2.4.0
+  path_provider: ^2.1.4
+  path: ^1.9.0
+  sqlite_async: ^0.9.0
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +55,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  test: ^1.25.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
