--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   path_provider: ^2.1.4
   path: ^1.9.0
   sqlite_async: ^0.9.0
+  flutter_slidable_plus: ^0.1.0
+  flutter_slidable: ^3.1.1
 
 dev_dependencies:
   flutter_test:
