--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   sqlite_async: ^0.9.0
   flutter_slidable_plus: ^0.1.0
   flutter_slidable: ^3.1.1
+  share_plus: ^10.1.2
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/images/logo.png
+    - assets/images/notes.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
