--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_slidable_plus: ^0.1.0
   flutter_slidable: ^3.1.1
   share_plus: ^10.1.2
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
