--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_slidable: ^3.1.1
   share_plus: ^10.1.2
   equatable: ^2.0.7
+  flutter_launcher_icons: ^0.14.1
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +70,7 @@ flutter:
   assets:
     - assets/images/logo.png
     - assets/images/notes.png
+    - assets/images/notes.svg
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
