--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -44,6 +46,7 @@ dependencies:
   share_plus: ^10.1.2
   equatable: ^2.0.7
   flutter_launcher_icons: ^0.14.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +65,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+
+  generate: true
+
   assets:
     - assets/images/logo.png
     - assets/images/notes.png
